--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -130,6 +130,7 @@ dependencies:
   share_plus: ^10.1.2
   lottie: ^3.1.3
   flutter_launcher_icons: ^0.14.1
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
